S2025/thuy dt/bugfix/fix lints gt (#6)
* Update, remove and fix

* Update Strategy.java

update, fix lints

* Update, remove and fix lints gt

* fix and remove suppressWarning

---------

Co-authored-by: kenshoul <scthanhhoa88@gmail.com>