@@ -1,15 +1,21 @@
 package org.fit.ssapp.ss.gt;
 
-
 import java.io.Serializable;
 import java.math.BigDecimal;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import lombok.Data;
+import lombok.Getter;
 import lombok.NoArgsConstructor;
+import lombok.Setter;
 
+/**
+ * Represents a game player with various attributes. a @Setter annotation automatically generates
+ * setter methods.
+ */
+@Setter
+@Getter
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
@@ -22,47 +28,41 @@ public class NormalPlayer implements Serializable {
   private String payoffFunction;
   private BigDecimal payoff;
 
-  public String getName() {
-    return name;
-  }
-
-  public void setName(String name) {
-    this.name = name;
-  }
-
-  public void setStrategies(List<Strategy> strategies) {
-    this.strategies = strategies;
-  }
-
-  public List<BigDecimal> getPayoffValues() {
-    return payoffValues;
-  }
-
-  public void setPayoffValues(List<BigDecimal> payoffValues) {
-    this.payoffValues = payoffValues;
-  }
-
+  /**
+   * Retrieves the strategy at the specified index.
+   */
   public Strategy getStrategyAt(int index) {
     return strategies.get(index);
   }
 
+  /**
+   * Removes the strategy at the specified index by setting it to null.
+   *
+   * @param index The index of the strategy to remove.
+   * @throws IndexOutOfBoundsException if the index is out of range.
+   */
   public void removeStrategiesAt(int index) {
     strategies.set(index, null);
   }
 
-  public String getPayoffFunction() {
-    return payoffFunction;
-  }
-
+  /**
+   * Removes all null values from the strategy list.
+   */
   public void removeAllNull() {
     strategies.removeIf(Objects::isNull);
   }
 
+  /**
+   * Finds and returns the index of the dominant strategy, which is the strategy with the highest
+   * payoff value.
+   *
+   * @return The index of the dominant strategy, or -1 if no strategies exist.
+   */
   public int getDominantStrategyIndex() {
 
     List<Double> payoffs = strategies.stream()
         .map(Strategy::getPayoff)
-        .collect(Collectors.toList());
+        .toList();
 
     double maxPayoffValue = payoffs.stream()
         .max(Double::compareTo)
@@ -72,49 +72,20 @@ public class NormalPlayer implements Serializable {
     return payoffs.indexOf(maxPayoffValue);
   }
 
-  public List<Strategy> getStrategies() {
-    return strategies;
-  }
-
-  public BigDecimal getPayoff() {
-    return payoff;
-  }
-
-  public void setPrevStrategyIndex(int prevStrategyIndex) {
-    this.prevStrategyIndex = prevStrategyIndex;
-  }
-
-  public int getPrevStrategyIndex() {
-    return prevStrategyIndex;
-  }
-
-
-  public void setPayoffFunction(String payoffFunction) {
-    this.payoffFunction = payoffFunction;
-  }
-
-  public void setPayoff(BigDecimal payoff) {
-    this.payoff = payoff;
-  }
-
-  public double getPurePayoff() {
-
-    // return sum of all payoffs
-    return strategies.stream()
-        .map(Strategy::getPayoff)
-        .reduce(Double::sum)
-        .orElse(0D);
-  }
-
+  /**
+   * Generates a string representation of the strategies and their payoffs.
+   *
+   * @return A formatted string containing the list of strategies and their payoffs.
+   */
   public String toString() {
-    StringBuilder NP = new StringBuilder();
+    StringBuilder np = new StringBuilder();
     for (Strategy s : strategies) {
-        if (s == null) {
-            continue;
-        }
-      NP.append("\nStrategy ").append(strategies.indexOf(s) + 1).append(":\t");
-      NP.append(s).append("\nPayoff: ").append(s.getPayoff());
+      if (s == null) {
+        continue;
+      }
+      np.append("\nStrategy ").append(strategies.indexOf(s) + 1).append(":\t");
+      np.append(s).append("\nPayoff: ").append(s.getPayoff());
     }
-    return NP.toString();
+    return np.toString();
   }
 }
